# projectLiquid

./: .gitignore  .windsurfrules  PROJECT_PLAN.md  README.md  STRATEGY_BOS_FVG.md  backtest.py  backtester.py  example_backtest.py  execution.py  futures_trader.py  live_bos_fvg_ccxt.py  pyproject.toml  requirements.txt  setup_python311_venv.sh  test_bos_fvg.py  test_bos_fvg_1h.py  test_bos_fvg_1m.py  test_htf_filter_mock.py  test_rsi.py  trade_journal.py  visualize_btcusd_4h_interactive.py  visualize_btcusd_results.py  visualize_trades.py
ai/: ai_analyzer.py  providers.py
algotrade/: __init__.py  cli.py  runner.py
algotrade/backtest/: engine.py
algotrade/data/: __init__.py  binance.py  btc_4h_data_2018_to_2025.csv  yahoo.py
algotrade/live/: binance_live_trader.py
algotrade/portfolio/: volatility_position_sizing.py
algotrade/signals/: __init__.py  atr_breakout.py  bollinger.py  bollinger_breakout.py  composite_ma_rsi.py  crossover.py  dl_signal.py  feature_engineering.py  ma.py  macd.py  macd_signal.py  meta_strategy.py  ml_signal.py  rsi.py  rsi_signal.py  stochastic.py
configs/: btcusd_1h_backtest.yaml  example_backtest.yaml
docker/: Dockerfile
execution/: alpaca_execution.py
memory_bank/: README.md  project_memory.json
recipes/ch01_data_ingest/: __init__.py  binance_download.py  yahoo_download.py
recipes/ch02_indicators/: __init__.py  bollinger.py  macd.py  rsi.py  sma_ema.py
strategies/: base_strategy.py  bos_fvg_strategy.py
tests/: test_backtest_all_recipes.py  test_ch01_data_ingest.py  test_indicators.py  test_signals.py
(+7 files in other folders)
