[tool.poetry]
name = "algotrade"
version = "0.0.1"
description = "Algorithmic trading toolkit implementing recipes from *Python for Algorithmic Trading Cookbook*"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^1.26"
pandas-ta = "^0.3"
scikit-learn = "^1.4"
backtrader = "^1.9"
matplotlib = "^3.8"
plotly = "^5.20"
PyPortfolioOpt = "^1.5"
python-binance = "^1.0"
ccxt = "^4.0"
hydra-core = "^1.3"
pydantic = "^2.5"
typer = {version = "^0.9", extras = ["all"]}
structlog = "^23.2"
loguru = "^0.7"
prometheus-client = "^0.19"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.13"
ruff = "^0.3"
mypy = "^1.9"
pytest = "^8.1"
pre-commit = "^3.7"

[tool.poetry.scripts]
algotrade = "algotrade.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
